# pdf-tools

./: .gitignore  README.md  pyproject.toml
pdf_merger/: __init__.py  cli.py  merge.py
pdf_tools/: __init__.py  cli_compress.py  cli_image_pad_square.py  cli_merge.py  cli_redact.py  cli_redact_area.py  cli_remove_pages.py  cli_render_page.py  compress.py  image_pad.py  merge.py  redact.py  redact_area.py  remove_pages.py  render_page.py
