[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-merger"
version = "0.1.0"
description = "Merge PDFs and images in order."
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "pypdf>=6.9.2",
]

[project.scripts]
pdf-merge = "pdf_merger.cli:main"
